manifests/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: observability-prod
  labels:
    app.kubernetes.io/name: k8s-observability-platform
    app.kubernetes.io/environment: prod
