manifests/overlays/prod/patch-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: observability-platform
spec:
  replicas: 4
  template:
    spec:
      containers:
        - name: backend
          resources:
            requests:
              cpu: 300m
              memory: 384Mi
            limits:
              cpu: 1
              memory: 1Gi
