manifests/overlays/prod/patch-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: observability-platform
spec:
  replicas: 3
