manifests/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: observability-platform
spec:
  rules:
    - host: platform.example.com
